fix: Use /image.sfs not sfx
