# polyaserver/__init__.py
@@ -25,7 +25,7 @@ api = falcon.API()
 api.add_route("/register", AuthRes())
 api.add_route("/revoke", RevokeRes())
 api.add_route("/config", ConfigRes())
-api.add_route("/image.sfx", ImageRes())
+api.add_route("/image.sfs", ImageRes())
 api.add_route("/next", NextRes())
 api.add_route("/students", StudentListRes())
 api.add_route("/student/{id}/{action}", StudentRes())
